# GlitchArtist

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: Application.cpp  Application.h
src/AudioEncoding/: IAudioCodec.h  IAudioEncoder.h  MuLawCodec.cpp  MuLawCodec.h
src/Effects/: Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Distorsion.cpp  Distorsion.h  EffectStack.cpp  EffectStack.h  Glitcher.cpp  Glitcher.h  IEffect.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h
src/FileLoading/: BMPLoader.cpp  BMPLoader.h  IFormatLoader.h  Image.cpp  Image.h
src/GuiComponents/: AudioWindow.cpp  AudioWindow.h  EffectStackWindow.cpp  EffectStackWindow.h  HexEditorWindow.cpp  HexEditorWindow.h  IWindow.h  MainMenuBar.cpp  MainMenuBar.h  PreviewWindow.cpp  PreviewWindow.h
src/Helpers/: ImGuiHelper.h
